# movie-api

./: .dockerignore  .editorconfig  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tests-run.sh
.envs/.local/: app.sample.env
.envs/.production/: app.sample.env
app/accounts/: admin.py  tests.py
app/accounts/migrations/: 0001_initial.py
app/accounts/tests/: factories.py  test_model.py
app/config/: pagination.py  settings.py  urls.py
app/config/settings/: base.py  local.py  production.py
app/core/: admin.py  fields.py  filters.py  models.py  serializers.py  urls.py  utils.py  views.py
app/core/migrations/: 0001_initial.py  0002_alter_network_country.py  0002_remove_movie_genre_movie_genre.py
app/core/tests/: factories.py  test_models.py  test_views.py
app/core/utils/: countries.py  languages.py  months.py  utils.py
app/datadump/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
app/datadump/migrations/: 0001_initial.py
app/datadump/tests/: factories.py  test_endpoints.py  test_models.py  test_views.py
app/healthcheck/: urls.py  views.py
app/staticfiles/: staticfiles.json
compose/: local.yml  production.yml
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile
data/: genres.csv  movies.csv  networks.csv
http_requests/genres/: genre_create.http  genre_list.http  genre_retrieve.http
http_requests/healthcheck/: ping.http
http_requests/movies/: movie_create.http  movie_delete.http  movie_list.http  movie_retrieve.http  test.json
(+2 files in other folders)
