[project]
name = "klasike"
description = "Vepra Klasike Shqiptare"
readme = "README.md"

[tool.isort]
profile = "black"
line_length = 119
extend_skip_glob = [
    ".git",
    ".venv",
    ".vscode",
    ".envs",
    ".github",
    ".pytest_cache",
    "migrations"
]
known_third_party = [
    "django",
    "pytest"
]
known_local_folder = [
    "config"
]

[tool.black]
line-length = 119
