[project]
name = "movie-api"
version = "0.1.0"
dependencies = ["django", "djangorestframework"]

[tool.isort]
profile = "black"
line_length = 119
extend_skip_glob = [
    ".git",
    ".venv",
    ".vscode",
    ".envs",
    ".github",
    ".pytest_cache/",
    "migrations/*"
]
known_third_party = [
    "django",
    "pytest",
    "rest_framework",
    "django_filters",
]
known_local_folder = [
    "config",
    "core",
    "healthcheck",
]

[tool.black]
line-length = 119

[tool.pip-tools]
generate-hashes = true
dry-run = true

[tool.pip-tools.compile]  # "sync" for pip-sync
dry-run = false
